--- a/web/templates/post/show.html.eex
+++ b/web/templates/post/show.html.eex
@@ -9,10 +9,10 @@
 
   <li>
     <strong>Body:</strong>
-    <%= @post.body %>
+    <%= markdown(@post.body) %>
   </li>
 
 </ul>
 
-<%= link "Edit", to: post_path(@conn, :edit, @post) %>
-<%= link "Back", to: post_path(@conn, :index) %>
+<%= link "Edit", to: user_post_path(@conn, :edit, @user, @post) %>
+<%= link "Back", to: user_post_path(@conn, :index, @user) %>
