--- a/web/templates/post/show.html.eex
+++ b/web/templates/post/show.html.eex
@@ -1,3 +1,5 @@
+<input type="hidden" id="post-id" value="<%= @post.id %>">
+
 <h2>Show post</h2>
 
 <ul>
@@ -13,6 +15,22 @@
   </li>
 
 </ul>
+
+<div class="comments">
+  <h2>Comments</h2>
+  <%= for comment <- @post.comments do %>
+    <%= render Pxblog.CommentView,
+      "comment.html",
+      comment: comment,
+      author_or_admin: @conn.assigns[:author_or_admin],
+      conn: @conn,
+      post: @post
+    %>
+  <% end %>
+</div>
+
+<hr/>
+<%= render Pxblog.CommentView, "form.html", changeset: @comment_changeset, action: post_comment_path(@conn, :create, @post) %>
 
 <%= link "Edit", to: user_post_path(@conn, :edit, @user, @post) %>
 <%= link "Back", to: user_post_path(@conn, :index, @user) %>
